# comsol_module

./: .gitignore  comsol_classes.py  demo.ipynb  entropy.py  helper.py  pyproject.toml
src/comsol_module/: __init__.py  comsol_classes.py  entropy.py  helper.py  shemat.py  voxeliser.py
tests/: conftest.py  test_comsol_classes.py
