[project]
name = "comsolclasses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "pydoe>=0.3.8",
    "pyvista>=0.44.2",
    "salib>=1.5.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "trame>=3.8.2",
    "trame-jupyter-extension>=2.1.4",
    "trame-vtk>=2.8.15",
    "trame-vuetify>=3.0.0",
    "vtk>=9.3.1",
]

[dependency-groups]
dev = ["autopep8>=2.3.2"]
