[project]
name = "comsol_module"
version = "0.2.0"
description = "Module to read and process output vtus/txt files from COMSOL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.4", "pyvista>=0.44.2"]

[project.optional-dependencies]
jupyter = [
    "trame-jupyter-extension>=2.1.4",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "jupyterlab>=4.4.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
pythonpath = "src"
